Refactor package structure, function descriptors (remove varargs option), fix whitespace, expand README